--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8100
 spring.application.name=demo
+
+#management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.tags.application=${spring.application.name}
+
+management.endpoints.web.exposure.include=*
+#management.endpoint.prometheus.enabled=true
+management.server.port=8100
+management.metrics.export.prometheus.enabled=true
